[package]
name = "glowpub"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
mime = "0.3"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
rand = "0.8"

textwrap = "0.16"
resvg = "0.35"
usvg = "0.35"
tiny-skia = "0.10"
fontdb = "0.14"
usvg-text-layout = "0.35"

epub-builder = { version = "0.7", default-features = false, features = ["libzip"] }

ammonia = "3"
cssparser = "0.29"
lightningcss = "1.0.0-alpha.44"
lol_html = "1.1"
html-escape = "0.2.13"
html5ever = "0.26.0"
xml5ever = "0.17.0"
markup5ever_rcdom = "0.2.0"
markup5ever = "0.11.0"
image = { version = "0.24.6", default-features = false, features = ["webp", "png"] }

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
simple_logger = "4.2"

[patch.crates-io.image]
# For `webp` decoding fix
git = "https://github.com/image-rs/image"
rev = "2e87fcd2684eecdd5bbe795ed60e62188cc5d8a5"
