[package]
name = "glowpub"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
log = "0.4"
mime = "0.3"
rand = "0.8"
regex = "1"
sha2 = "0.10.8"
uuid = { version = "1", features = ["v4"] }

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

fontdb = "0.16"
resvg = "0.41"
textwrap = "0.16"
tiny-skia = "0.11"
usvg = "0.41"

epub-builder = { version = "0.7", default-features = false, features = ["libzip"] }

ammonia = "4"
cssparser = "0.33"
html-escape = "0.2"
html5ever = "0.27"
lightningcss = "1.0.0-alpha.55"
lol_html = "1"
markup5ever = "0.12"
markup5ever_rcdom = "0.3"
xml5ever = "0.18"

image = { version = "0.25.1", default-features = false, features = ["webp", "png"] }

clap = { version = "4.1", features = ["derive"] }
simple_logger = "4.2"
slug = "0.1"
